# Flask-API-Server

./: .env.example  README.md  README.rst  app.py  pyproject.toml  requirements.txt
src/: app.py  mutation.py  query.py
src/models/: base.py  post.py  role.py  user.py
src/mutations/: index.py  post_create.py  post_delete.py  post_update.py  role_create.py  user_create.py
src/objects/: index.py  post.py  role.py  user.py
tests/: test_flask_api_server.py
