[tool.poetry]
name = "flask-api-server"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
python-dotenv = "^0.19.2"
Flask = "^2.0.2"
mongoengine = "^0.23.1"
flask-mongoengine = "^1.0.0"
graphene-mongo = "^0.2.13"
Flask-GraphQL = "^2.0.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
